--- a/style.css
+++ b/style.css
@@ -1,9 +1,55 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    
+body {
+  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+.cover-img-section {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.068), rgb(0, 0, 0)),
+    url("Images/donation12.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.cover-element {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.slogan {
+  color: #ffffff;
+  text-align: center;
+  font-size: 60px;
+  padding-top: 15%;
+  margin-bottom: 2%;
+}
+
+.measage {
+  color: #ffffff;
+  text-align: center;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 25px;
+  color: #ffffff;
+}
+.donate-now {
+  color: #ffffff;
+  font-size: 30px;
+  text-decoration: none;
+  text-transform: capitalize;
+  margin-left: 42%;
+  margin-top: 20px;
+  padding: 20px 20px;
+  background: #000;
+  cursor: pointer;
+  border-radius: 20px;
 }
