--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font-family: "Nunito", sans-serif;
   font-family: "Poppins", sans-serif;
 }
-
+/* section 1 */
 .cover-img-section {
   height: 100vh;
   width: 100%;
@@ -53,3 +53,83 @@ body {
   cursor: pointer;
   border-radius: 20px;
 }
+
+/* section 2 */
+
+.donate-today {
+  height: auto;
+  width: 100%;
+  margin-top: 30px;
+}
+.elements {
+  height: auto;
+  width: 80%;
+  margin: 0 auto;
+}
+.elements h1 {
+  font-size: 40px;
+  text-align: center;
+  margin-top: 35px;
+}
+.elements p {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 25px;
+}
+.cards {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5%;
+}
+.gift {
+  height: 150px;
+  width: 150px;
+  background: rgb(209, 209, 209);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.selected {
+  background: rgb(245, 119, 119);
+  border: 5px solid rgb(253, 0, 0);
+}
+
+.lavel {
+  display: block;
+  font-size: 25px;
+}
+.input {
+  padding: 20px 250px;
+  margin-left: 20%;
+  border-bottom: 2px solid black;
+  border-left: none;
+  border-top: none;
+  border-right: none;
+  margin-bottom: 20px;
+}
+.btn {
+  display: block;
+  margin: 0 auto;
+  padding: 15px 60px;
+  background-image: linear-gradient(to right, rgb(49, 92, 233), rgb(23, 193, 245));
+  border: none;
+  border-radius: 10px;
+  font-size: 25px;
+  color: #ffffff;
+}
+
+.btn:hover{
+  background-image: linear-gradient(to right, rgb(24, 133, 30), rgb(23, 193, 245));
+  transition: 5ms;
+}
+/* #intut :focus{
+  border-bottom: 2px solid black;
+  background: #000;
+  border-left: none;
+  border-top: none;
+  border-right: none;
+
+} */
+
+
