Third Section Done

--- a/style.css
+++ b/style.css
@@ -132,4 +132,59 @@ body {
 
 } */
 
+.donate-plan{
+  padding-top: 100px;
+  height: auto;
+  width: 80%;
+  margin: 0 auto;
+  background: rgba(255, 255, 255, 0);
+}
+
+.donate-plan h1{
+  font-size: 40px;
+  text-align: center;
+  padding-bottom: 20px;
+}
+.donate-plan p{
+  text-align: justify;
+  margin-top: 10px;
+  padding: 30px;
+  
+}
+.card-1{
+  width: 100%;
+  background: rgba(240, 0, 0, 0.185);
+  margin-right: 5%;
+}
+.card-1 img{
+  margin-left: 45%;
+  margin-top: 5%;
+}
+.card-2{
+  width: 100%;
+  background: rgba(3, 110, 12, 0.411);
+  margin-right: 5%;
+}
+.card-2 img{
+  margin-left: 45%;
+  margin-top: 5%;
+}
+.card-3{
+  width: 100%;
+  background: rgba(3, 97, 110, 0.411);
+  margin-right: 5%;
+}
+.card-3 img{
+  margin-left: 45%;
+  margin-top: 5%;
+}
+.card-1 h2{
+  text-align: center;
+}
+.card-2 h2{
+  text-align: center;
+}
+.card-3 h2{
+  text-align: center;
+}
 
