--- a/style.css
+++ b/style.css
@@ -291,3 +291,13 @@ body {
   color: #ffffff;
   transition: 0.5s;
 }
+.footer{
+  width: 100%;
+  height: 100%;
+  background: #000;
+  color: white;
+  margin-top: -20px;
+}
+.footer p{
+  text-align: center;
+}
