--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-family: "Nunito", sans-serif;
   font-family: "Poppins", sans-serif;
 }
+
 /* section 1 */
 .cover-img-section {
   height: 100vh;
@@ -41,6 +42,7 @@ body {
   font-size: 25px;
   color: #ffffff;
 }
+
 .donate-now {
   color: #ffffff;
   font-size: 30px;
@@ -61,26 +63,31 @@ body {
   width: 100%;
   margin-top: 30px;
 }
+
 .elements {
   height: auto;
   width: 80%;
   margin: 0 auto;
 }
+
 .elements h1 {
   font-size: 40px;
   text-align: center;
   margin-top: 35px;
 }
+
 .elements p {
   text-align: center;
   margin-bottom: 20px;
   font-size: 25px;
 }
+
 .cards {
   display: flex;
   justify-content: space-between;
   margin-bottom: 5%;
 }
+
 .gift {
   height: 150px;
   width: 150px;
@@ -90,6 +97,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .selected {
   background: rgb(245, 119, 119);
   border: 5px solid rgb(253, 0, 0);
@@ -99,6 +107,7 @@ body {
   display: block;
   font-size: 25px;
 }
+
 .input {
   padding: 20px 250px;
   margin-left: 20%;
@@ -108,15 +117,14 @@ body {
   border-right: none;
   margin-bottom: 20px;
 }
+
 .btn {
   display: block;
   margin: 0 auto;
   padding: 15px 60px;
-  background-image: linear-gradient(
-    to right,
-    rgb(49, 92, 233),
-    rgb(23, 193, 245)
-  );
+  background-image: linear-gradient(to right,
+      rgb(49, 92, 233),
+      rgb(23, 193, 245));
   border: none;
   border-radius: 10px;
   font-size: 25px;
@@ -124,13 +132,12 @@ body {
 }
 
 .btn:hover {
-  background-image: linear-gradient(
-    to right,
-    rgb(24, 133, 30),
-    rgb(23, 193, 245)
-  );
+  background-image: linear-gradient(to right,
+      rgb(24, 133, 30),
+      rgb(23, 193, 245));
   transition: 5ms;
 }
+
 /* #intut :focus{
   border-bottom: 2px solid black;
   background: #000;
@@ -153,44 +160,54 @@ body {
   text-align: center;
   padding-bottom: 20px;
 }
+
 .donate-plan p {
   text-align: justify;
   margin-top: 10px;
   padding: 30px;
 }
+
 .card-1 {
   width: 100%;
   background: rgba(240, 0, 0, 0.185);
   margin-right: 5%;
 }
+
 .card-1 img {
   margin-left: 45%;
   margin-top: 5%;
 }
+
 .card-2 {
   width: 100%;
   background: rgba(3, 110, 12, 0.411);
   margin-right: 5%;
 }
+
 .card-2 img {
   margin-left: 45%;
   margin-top: 5%;
 }
+
 .card-3 {
   width: 100%;
   background: rgba(3, 97, 110, 0.411);
   margin-right: 5%;
 }
+
 .card-3 img {
   margin-left: 45%;
   margin-top: 5%;
 }
+
 .card-1 h2 {
   text-align: center;
 }
+
 .card-2 h2 {
   text-align: center;
 }
+
 .card-3 h2 {
   text-align: center;
 }
@@ -206,10 +223,12 @@ body {
   width: 50%;
   margin-top: 20px;
 }
+
 .text-area h1 {
   text-align: center;
   padding-bottom: 20px;
 }
+
 .text-area p {
   margin-bottom: 25px;
 }
@@ -217,6 +236,7 @@ body {
 .image-area {
   width: 50%;
 }
+
 .image-area img {
   width: 80%;
   margin-left: 40px;
@@ -236,32 +256,73 @@ body {
   padding: 15px 25px;
   border: none;
   border-radius: 20px;
-  background-image: linear-gradient(
-    to right,
-    rgb(49, 92, 233),
-    rgb(23, 193, 245)
-  );
+  background-image: linear-gradient(to right,
+      rgb(49, 92, 233),
+      rgb(23, 193, 245));
   color: #ffffff;
   font-size: 35px;
   cursor: pointer;
 }
+
+.payment-methoods {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 10%;
+}
+
+.payment-methoods h1 {
+  font-size: 35px;
+  text-align: center;
+
+}
+
+.methoods {
+  margin-top: 40px;
+  padding-top: 30px;
+
+
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.icons img {
+  height: 256px;
+  width: 256px;
+  border: 5px solid rgb(116, 177, 25);
+  border-radius: 20px;
+}
+
+.icons img:hover {
+  box-shadow: 20px 20px 10px grey;
+  cursor: pointer;
+  transition: 0.50s;
+}
+
 
 .get-my-updates {
   width: 100%;
   margin-top: 60px;
   margin-bottom: 60px;
 }
+
 .stuff {
   width: 80%;
   margin: 0 auto;
 }
+
 .stuff h1 {
   text-align: center;
   font-size: 35px;
 }
+
 .stuff p {
   text-align: center;
 }
+
 .box {
   height: 200px;
   width: 1000px;
@@ -272,13 +333,16 @@ body {
   justify-content: center;
   padding-top: 30px;
 }
-.box input{
-  padding: 20px 100px;background: rgb(235, 235, 235);
+
+.box input {
+  padding: 20px 100px;
+  background: rgb(235, 235, 235);
   border: none;
   border-radius: 10px;
 
 }
-.box button{
+
+.box button {
   cursor: pointer;
   border: none;
   padding: 20px;
@@ -286,18 +350,21 @@ body {
   margin-left: 5px;
   font-size: 15px;
 }
-.box button:hover{
+
+.box button:hover {
   background: rgb(255, 136, 0);
   color: #ffffff;
   transition: 0.5s;
 }
-.footer{
+
+.footer {
   width: 100%;
   height: 100%;
   background: #000;
   color: white;
   margin-top: -20px;
 }
-.footer p{
+
+.footer p {
   text-align: center;
 }
